--- a/Project.Rmd
+++ b/Project.Rmd
@@ -16,14 +16,14 @@ output: bookdown::pdf_document2
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = T, results = 'markup', message = F)
 
-# Load nclSLR package
+# Load packages
 library(nclSLR)
 library(knitr)
 
 # Load the data
 data(Boston, package='nclSLR')
 
-# Table function (uses kable)
+# Table function with rounding (uses kable)
 table = function(dataset, cap, dp = 3){
   kable(format(round(dataset, dp), nsmall = dp), caption = cap)
 }
@@ -32,39 +32,46 @@ table = function(dataset, cap, dp = 3){
 
 
 \newpage
+
 # Introduction 
 
-This report summaries the steps undertaken to produce a linear regression model of the value of housing in Boston Standard Metropolitan to predict the value of logarithmic crime rate (lcrim) using other variables. The model would be built after exploratory and unsuperivsed statistical analysis of the data (all using R functions), which would be carried first to gain an understanding on the data characteristics and structure before hand. 
+This report summaries the steps undertaken to produce and evaluate linear regression models of the value of housing in Boston Standard Metropolitan to predict the value of logarithmic crime rate (lcrim) using other variables. The model would be built after exploratory and unsupervised statistical analysis of the data which is carried first to gain an understanding on the data characteristics and structure before hand. The models would be build using both sub-setting (best fit and step wise) and regularisation methods (LASSO and Ridge Fit) methods, these methods will be compared using k fold cross validation.
 
-Any output (tables and plots) is placed in the Appendix at the end of the report with the code that generated it, the description and analysis of the methods and their output is found in the document body which cross references it.
-
-\newpage
+Any output (tables and plots) is placed in the Appendix at the end of the report with the R code that generated it, the description and analysis of the methods and their output is found in the document body which cross references the appendix content. Values in tables and other numerical results are corrected to 3 decimal places unless stated otherwise.
 
 # Exploratory Data Analysis
 
-Before building a linear model, it is wise to first understand the overall structure of the data itself to get a feeling for the data characteristics. 
+Before building a linear model, it is wise to first understand the overall structure of the data itself to get a feeling for the data characteristics and how the variables relate to one another - especially how they relate to the response variable (lcrime).
 
 ## Data Spread and Location 
 
-To analyse the distribution of the data, the quantiles and means will be examined. In particular, this part of the report will examine outliers, scale, consistency and certainity. 
+To analyse the distribution of the data, the quantiles and means will be examined. In particular, this part of the report will examine outliers, scale, consistency and certainty. 
 
 ### Mean Vector
 
-Using the col means functions a vector of mean averages can be produced for all the predictors and the response variables in the Boston dataset. 
+Using the col means functions a vector of mean averages can be produced for all the predictors and the response variables in the Boston data-set. 
 
-The returned table (transposed) is in table \@ref(tab:mean-vector) in the Appendix, and shows how the means are well spread out from one another, which suggests a difference in the nature of the measurements.
+The returned table (transposed) is in table \@ref(tab:mean-vector) in Appendix A.2, and shows that the means are well spread out from one another, which suggests a difference in the nature of the measurements.
 
-Examining the structure of the variables in the Boston data set using the ?Boston confirms that (i.e.)
+Examining the structure of the variables in the Boston data set using the ?Boston confirms that the nature of the measurements vary from Full-value property-tax rate per $10,000 for tax to Nitrogen oxides parts per 10 million for nox for instance, which obviously suggests that the measurements cannot be directly compared scale to scale (standarisation might be required).
 
 ### Box Plot and Quantiles
 
-The returned plot in \@ref(fig:box-plot).
+As previously stated in the previous section, the variables are of different natures and scales, hence any scale to scale comparsion needs standarisation. To standardise the data a scale transform was applied using the base R scale() function, and using the boxplot base function the plot in figure \@ref(fig:box-plot) is generated. 
+
+The following stands out of the plot:
+
+* black, rm, zn and medv predictor variables have significantly more outliers than the other variables.And hence more uncertain and also their averages can get skewed.
+
+* chas predictor variable semms to have a very tight ranges that are practicaly identical. This is because this is a binary variable.
+
+* zn, rad and tax predictor variables have a short Q1 to Q2 range compared to the Q2 to Q3 range, suggesting that the lower values of the data are very tightly clustered. black has the opposite problem.
+
+* rm, lstat, mdev and ptratio have long minimum and maximum ranges in comparision to their IQR ranges, and hence more exterme values. This means that rheir averages can get skewed.
 
 ## Data Relationships 
 
-### Pairs Plot
-
-### Correlation and Variance Matricies
+### Pairs Plot and Correlation Matricies
 
 \newpage
 
@@ -82,7 +89,7 @@ The returned plot in \@ref(fig:box-plot).
 
 # Appendix 
 
-This section contains all supplementary material and is divided into three sections (Tables, Plots and Abbrevations). The code required to generate the supplementary material is also included
+This section contains all supplementary material and is divided into three sections (Tables, Plots and Abbreviations). The code required to generate the supplementary material is also included
 
 ## A.1 Abbrevations
 
@@ -125,7 +132,8 @@ table(pca$rotation[,1:3], 'PCA Components')
 
 ### Code to Generate Figure \@ref(fig:box-plot)
 ```{r box-plot, fig.cap='Box Plot'}
-boxplot(Boston, cex.axis=0.6)
+# scale transforms to deal with the variation in the nature of the measurements
+boxplot(scale(Boston), cex.axis=0.6)
 ```
 
 \blandscape
