--- a/Project.Rmd
+++ b/Project.Rmd
@@ -301,8 +301,13 @@ table(pca$rotation[,1:3], 'PCA Components')
 
 ### Code to Generate Table \@ref(tab:best-sub-select)
 ```{r best-sub-select}
+# Get scaled results and response
+X_raw = as.matrix(Boston[-1])
+X = scale(X_raw)
+y = Boston[,1]
+
 # fit model
-bss = regsubsets(lcrim ~ ., data=Boston, method="exhaustive", nvmax= 13)
+bss = regsubsets(y ~ ., data=data.frame(y,X), method="exhaustive", nvmax= 13)
 
 # Summarise
 bssSummary = summary(bss)
@@ -320,22 +325,20 @@ table(coef(bss, id = 9), "Best Subset Coefficient Selection (9 Predictors)")
 
 
 ```{r ridge-fit-coef}
-## Fit a ridge regression model with idea lambda (0.001)
-ridgeFit = glmnet(as.matrix(Boston[-1]), 
-                  as.vector(Boston$lcrim), alpha=0, standardize=FALSE, lambda=0.001)
-table(as.data.frame(as.matrix(coef(ridgeFit, s = 0.001))),
-      "Ridge Regression Coefficients with Lambda = 0.001")
+## Fit a ridge regression model with idea lambda (~0.006)
+ridgeFit = glmnet(X, y, alpha=0, standardize=FALSE, lambda= 0.006428073)
+table(as.data.frame(as.matrix(coef(ridgeFit, s = 0.006428073))),
+      "Ridge Regression Coefficients with Lambda = ~0.006")
 ```
 
 
 ```{r lasso-coef}
-## Fit a LASSO regression model with idea lambda (0.001)
+## Fit a LASSO regression model with idea lambda (~0.016)
 lassoFit = glmnet(as.matrix(Boston[-1]), 
-                  as.vector(Boston$lcrim), alpha=1, standardize=FALSE, lambda=0.001)
-table(as.data.frame(as.matrix(coef(lassoFit, s = 0.001))),
-      "LASSO Coefficients with Lambda = 0.001")
+                  as.vector(Boston$lcrim), alpha=1, standardize=FALSE, lambda= 0.01629751)
+table(as.data.frame(as.matrix(coef(lassoFit, s = 0.01629751))),
+      "LASSO Coefficients with Lambda = ~0.016")
 ```
-
 
 \newpage
 
@@ -377,7 +380,6 @@ plot(pca$x[,1], pca$x[,2], main ="Principle Component 1 vs 2 for Boston Housing 
 
 ### Code to Generate Figure \@ref(fig:best-sub-cv)
 ```{r best-sub-cv, fig.cap='Best Subset Predictor Selection'}
-
 # *** SSE Based Measurements ***
 
 # Find best score for SSE based measurements (already done by bss summary)
@@ -465,8 +467,7 @@ grid = 10^seq(5, -3, length=100)
 
 ## Fit a ridge regression model for each value of the tuning parameter
 # alpha 0 -> Ridge regression not LASSO
-ridgeFit = glmnet(as.matrix(Boston[-1]), 
-                  as.vector(Boston$lcrim), alpha=0, standardize=FALSE, lambda=grid)
+ridgeFit = glmnet(X, y, alpha=0, standardize=FALSE, lambda=grid)
 
 plot(ridgeFit, xvar="lambda", col=1:13, label=TRUE)
 ```
@@ -477,8 +478,7 @@ plot(ridgeFit, xvar="lambda", col=1:13, label=TRUE)
 ```{r ridge-fit-cv, fig.cap="Ridge Fit 10 Fold Cross Validation"}
 # Fit a ridge regression model using all lambdas with cv validation
 # alpha 0 -> Ridge regression not LASSO
-ridgeFitCv = cv.glmnet(as.matrix(Boston[-1]), 
-                       as.vector(Boston$lcrim), alpha=0, standardize=FALSE, lambda=grid)
+ridgeFitCv = cv.glmnet(X, y, alpha=0, standardize=FALSE, lambda=grid)
 
 plot(ridgeFitCv) # plot cross validated error
 
@@ -492,8 +492,7 @@ plot(ridgeFitCv) # plot cross validated error
 ```{r lasso-lambdas, fig.cap="LASSO Coefficents versus Lambdas"}
 # Fit a ridge regression model for each value of the tuning parameter
 # alpha 1 -> LASSO
-lasso = glmnet(as.matrix(Boston[-1]), 
-               as.vector(Boston$lcrim), alpha=1, standardize=FALSE, lambda=grid)
+lasso = glmnet(X, y, alpha=1, standardize=FALSE, lambda=grid)
 
 plot(lasso, xvar="lambda", col=1:13, label=TRUE)
 ```
@@ -504,8 +503,7 @@ plot(lasso, xvar="lambda", col=1:13, label=TRUE)
 ```{r lasso-cv, fig.cap="LASSO 10 Fold Cross Validation"}
 # Fit a ridge regression model using all lambdas with cv validation
 # aplha 1 -> LASSO
-lassoCv = cv.glmnet(as.matrix(Boston[-1]), 
-                    as.vector(Boston$lcrim), alpha=1, standardize=FALSE, lambda=grid)
+lassoCv = cv.glmnet(X, y, alpha=1, standardize=FALSE, lambda=grid)
 
 plot(ridgeFitCv) # plot cross validated error
 
